--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <body>
 <div class="hero">
     <h1 id="h1">Digital Clock</h1>
+     <footer id="foot1">
+        <p>&#169; 2023 RaviPrakash4344.All rights reserved.</p>
+    </footer>
     <div class="container">
         <div class="clock">
             <span id="hrs">00</span>
